Acrescimo do metodo de delete nos services e criacao do formulario no componente

--- a/src/app/cadastro-jogador/cadastro-jogador.component.html
+++ b/src/app/cadastro-jogador/cadastro-jogador.component.html
@@ -1,3 +1,17 @@
-<p>
-  cadastro-jogador works!
-</p>
+<div class="container">
+  <div class="jumbotron">
+
+    <div>
+
+      <form action="">
+
+        <input type="text">
+        <input type="text">
+        <input type="text">
+        <input type="text">
+        <input type="text">
+        <input type="text">
+      </form>
+    </div>
+  </div>
+</div>
