new alterations and code review

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,5 +1,35 @@
 <div class="flex">
-<h1>
-  ok ok
-</h1>
+
+  <div class="jumbotron">
+
+    <form [formGroup]="loginForm" (ngSubmit)="submit()" class="formGroup">
+
+      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/74/TinderLogo-2017.svg/2000px-TinderLogo-2017.svg.png"
+        class="mx-auto d-block" alt="logo-tinder">
+
+      <div class="form-group">
+        <input formControlName="email" type="text" class="form-control" placeholder="Email">
+      </div>
+
+      <div class="form-group">
+        <input formControlName="password" type="password" class="form-control" placeholder="Senha">
+      </div>
+
+      <button type="submit" class="btn btn-block btn-info">Login</button>
+
+      <p class="text-center mt-3"> 
+          <a [routerLink]="['/cadastro']">Cadastre-se</a> 
+      </p>
+        
+
+    </form>
+
+  </div>
+
+
+  <div class="alert" *ngIf="viewAlert">
+    {{message}}
+  </div>
+
+
 </div>
