--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,7 +1,18 @@
 .flex{
     width: 100%;
     height: 100%;
+    position: absolute;
     display: flex;
     align-items: center;
-    
+    justify-content: center;
+}
+.jumbotron{
+    width: 400px;
+    background-color: white;
+    border-radius: 15px;
+    box-shadow: 1px 1px 14px 1px #d0d0d0;
+}
+img{
+    max-width: 250px;
+    padding: 15px;
 }
