--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -7,7 +7,8 @@
     justify-content: center;
 }
 .login-box{
-    width: 400px;
+    width: 300px;
+    height: 100px;
     background-color: blue;
-    border-radius: 15px
+    border-radius: 10px
 }
