--- a/src/app/listagem-times/listagem-times.component.html
+++ b/src/app/listagem-times/listagem-times.component.html
@@ -1,8 +1,29 @@
-<button type="button" class="btn btn-danger" routerLink="/cadastrar-time">Adicionar Time</button>
-<div *ngFor="let time of times" class="card text-white bg-dark mb-3" style="max-width: 18rem;">
-    <div class="card-header">Time</div>
-    <div class="card-body">
-      <h5 class="card-title">{{time.nome}}</h5>
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+<div class="container">
+  <div class="head">
+
+
+    <div class="input-group mb-3">
+
+      <div class="input-group mb-3">
+        <input [(ngModel)]="userFilter.name" type="text" class="form-control" placeholder="Buscar Time..." aria-label="Recipient's username" aria-describedby="button-addon2">
+        <div class="input-group-append">
+         
+        </div>
+      </div>
+      <button type="button" class="btn btn-danger" routerLink="/cadastrar-time">Adicionar Time</button>
+    </div>
+
+
+
+    <div class="list-group">
+      <a style="background-color: black; font-weight: bold; border:none " href="#" class="list-group-item list-group-item-action active">
+        Times
+      </a>
+      <a style="color:black; font-weight: bold" *ngFor="let time of times | filterBy: userFilter"  class="list-group-item list-group-item-action">{{time.name}}
+        <button (click)="deleteTime(time.id)" style="background-color: red; float: right" class="btn btn-outline-secondary" type="button" id="button-addon2">
+          <i style="color: white" class="fas fa-trash-alt"></i>
+          <li *ngIf="(times | filterBy: userFilter).length === 0">Sem Resultados...</li>
+        </button>
+      </a>
     </div>
   </div>
