Ajustes para testar fluxo das telas prontas

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
-<app-cadastro-jogador></app-cadastro-jogador>
+<!-- <app-cadastro-jogador></app-cadastro-jogador> -->
 <router-outlet></router-outlet>
