--- a/src/app/jogador/lista-jogador/lista-jogador.component.html
+++ b/src/app/jogador/lista-jogador/lista-jogador.component.html
@@ -22,5 +22,10 @@
             </div>
           </div>
 
+
+          <div style="margin-left: 1%">
+              <button style="background-color: black; border: none" type="button" class="btn btn-danger" routerLink="">Voltar</button>
+            </div>
+
   </div>
 </div>
