Pegando o template de Neto e implementando o preenchimento do modal

--- a/src/app/jogador/cadastro-jogador/cadastro-jogador.component.html
+++ b/src/app/jogador/cadastro-jogador/cadastro-jogador.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="jumbotron">
+  <!-- <div class="jumbotron">
 
     <div class="form-group">
 
@@ -43,7 +43,7 @@
           </div>
         </div>
       </form>
-    </div>
+    </div> -->
 
     <!-- <div>
       <div>
@@ -57,5 +57,47 @@
     </div>
 
     <app-lista-jogador></app-lista-jogador> -->
+    <div class="container">
+      <form [formGroup]="jogadorForm">
+          <div class="form-row">
+              <div class="col-7">
+                  <input type="text" class="form-control" formControlName="nome" placeholder="Nome...">
+              </div>
+              <div class="col">
+                  <input type="date" class="form-control" formControlName="nascimento" placeholder="Nascimento...">
+              </div>
+              <div class="col">
+                  <input type="text" class="form-control" formControlName="rg" placeholder="Rg...">
+              </div>
+          </div>
+          <div style="margin-top: 2%" class="form-row">
+              <div class="col-6">
+                  <input type="text" class="form-control" formControlName="pai" placeholder="Pai...">
+              </div>
+              <div class="col-6">
+                  <input type="text" class="form-control" formControlName="mae" placeholder="Mãe...">
+              </div>
+          </div>
+          <div style="margin-top: 2%; margin-bottom: 2%" class="form-row">
+                  <div class="col-4">
+                      <input type="text" class="form-control" formControlName="endereco" placeholder="Endereço...">
+                  </div>
+                  <div class="col-3">
+                      <input type="text" class="form-control" formControlName="time" placeholder="Time...">
+                  </div>
+                  <div class="col-5">
+                          <input type="text" class="form-control" formControlName="observacao" placeholder="Observação...">
+                      </div>
+              </div>
+      </form>
+  
+      <div style="justify-content: center; align-items: center; display: flex">
+          <div style="margin-right: 1%">
+              <button style="background-color: green; border: none" type="button" (click)="cadastraJogador()" class="btn btn-danger">Salvar</button>
+          </div>
+          <div style="margin-left: 1%">
+              <button style="background-color: black; border: none" type="button" class="btn btn-danger" routerLink="/listar-jogadores">Voltar</button>
+          </div>
+      </div>
   </div>
 </div>
