--- a/src/app/jogador/lista-jogador/lista-jogador.component.css
+++ b/src/app/jogador/lista-jogador/lista-jogador.component.css
@@ -9,3 +9,15 @@
     flex-direction: row;
     justify-content: space-between;
 }
+
+.container{
+    margin-top: 2%;
+}
+.head{
+    margin-bottom: 2%;
+}
+.btn{
+    background-color: black;
+    font-weight: bold;
+    border: none
+}
