--- a/src/app/listagem-jogadores/listagem-jogadores.component.html
+++ b/src/app/listagem-jogadores/listagem-jogadores.component.html
@@ -12,6 +12,7 @@
         </div>
       </div>
       <button type="button" class="btn btn-danger" routerLink="/cadastrar-jogador">Adicionar Jogador</button>
+      <button type="button" class="btn btn-danger" routerLink="/listar-time">Voltar</button>
     </div>
 
 
