--- a/src/app/listagem-times/listagem-times.component.html
+++ b/src/app/listagem-times/listagem-times.component.html
@@ -10,13 +10,14 @@
          
         </div>
       </div>
-      <button type="button" class="btn btn-danger" routerLink="/cadastrar-time">Adicionar Time</button>
+      <button type="button" class="btn btn-danger" routerLink="/cadastrar-time">Adicionar time</button>
+      <button type="button" class="btn btn-danger" routerLink="/dashboard">Voltar</button>
     </div>
 
 
 
     <div class="list-group">
-      <a style="background-color: black; font-weight: bold; border:none " href="#" class="list-group-item list-group-item-action active">
+      <a style="color:white; background-color: black; font-weight: bold; border:none "  class="list-group-item list-group-item-action active">
         Times
       </a>
       <a style="color:black; font-weight: bold" *ngFor="let time of times | filterBy: userFilter"  class="list-group-item list-group-item-action">{{time.nome}}
@@ -26,7 +27,7 @@
 
           
         </button>
-        <button routerLink="/listar-jogador" style="background-color: green; float: right; margin-right: 1%" class="btn btn-outline-secondary" type="button" id="button-addon2">
+        <button (click)="detailTime(time)" style="background-color: green; float: right; margin-right: 1%" class="btn btn-outline-secondary" type="button" id="button-addon2">
           <i style="color: white" class="far fa-arrow-alt-circle-right"></i>
         </button>
       </a>
