--- a/src/app/cadastro-times/cadastro-times.component.html
+++ b/src/app/cadastro-times/cadastro-times.component.html
@@ -2,7 +2,7 @@
   <div class="input-group mb-3">
 
     <div class="input-group mb-3">
-      <input [(ngModel)]="time.name"  type="text" class="form-control" placeholder="Time..." aria-label="Recipient's username" aria-describedby="button-addon2">
+      <input [(ngModel)]="time.nome"  type="text" class="form-control" placeholder="Time..." aria-label="Recipient's username" aria-describedby="button-addon2">
     </div>
     
   </div>
