--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,1 +1,7 @@
+<div class="container">
 
+<button routerLink="/listar-time" type="button" class="btn btn-primary btn-lg">TIMES
+</button>
+
+<button type="button" class="btn btn-secondary btn-lg">PARTIDAS</button>
+</div>
