--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+body{
+    background-image: url("./assets/football_ball_boy_pass_2824_1920x1080.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+}
